syntax = "proto3";

package battle;

service BattleService {
  rpc GetResult(GetResultRequest) returns (GetResultResponse) {}
}

message Player {
  int32 intelligence = 5;
  int32 strength = 6;
  int32 speed = 7;
  int32 durability = 8;
  int32 power = 9;
  int32 combat = 10;
}

message GetResultRequest {
  Player player_one = 1;
  Player player_two = 2;
}

message GetResultResponse {
  int32 winner = 1;
}
